# simesh

./: .gitignore  README.md  build.py  demo.ipynb  pyproject.toml  setup.py
src/simesh/: __init__.py
src/simesh/dataset/: data_set.py
src/simesh/frontends/amrvac/: datio.py  io.py
src/simesh/geometry/amr/: amr.py  amr_forest.py  generators.py  morton_order.py  octree.pyx
src/simesh/mesh/: amr_mesh.py  mesh.py
src/simesh/meshes/: amr_mesh.py
src/simesh/src_old/: amr_mesh.py  amr_selection.cp311-win_amd64.pyd  amr_selection.pyx  datfile_io.py  morton_amr.py  setup.py
src/simesh/utils/: calculation.py  configurations.py  octree.py
src/simesh/utils/lib/: math.pxd  morton.pxd  morton.pyx
tests/: test_interleave_bits.py  test_load_slab_physbound.py  tests.ipynb  tests_old.ipynb
tests/pytests/: test_amr_forest.py  test_amr_mesh.py  test_amrvac.py  test_amrvacio.py  test_morton_order.py
