[tool.poetry]
name = "simesh"
version = "0.1.0"
description = "A mesh handling package for simulation data"
authors = ["Astery <aster0502@outlook.com>"]
packages = [
    { include = "simesh", from = "src" }
]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
vtk = "^9.4.1"
cython = "^3.0.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
yt = "^4.4.0"
f90nml = "^1.4.4"
jupyterlab = "^4.3.4"
ipykernel = "^6.29.5"


[tool.poetry.group.ext.dependencies]
pandas = "^2.2.3"
scipy = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel", "Cython>=3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
